swiper container overflow fix

--- a/components/Carousel/carousel.module.css
+++ b/components/Carousel/carousel.module.css
@@ -1,12 +1,21 @@
 .root {
-  position: relative;
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
 }
+
 .swiperContainer {
+  /* Swiper context fixes */
+  /* https://github.com/nolimits4web/swiper/issues/3599 */
+  width: 100%;
+  max-width: 100%;
+  max-height: 100vh;
+  /* CSS Grid/Flexbox bug size workaround */
+  /* @see https://github.com/kenwheeler/slick/issues/982 */
+  min-height: 0;
+  min-width: 0;
   grid-row: 1/2;
   height: 388px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
 
   @media (--tablet) {
     height: 370px;
@@ -15,7 +24,6 @@
 
 .swiperSlide {
   text-align: center;
-  font-size: 18px;
   background: transparent;
   grid-row: 1/2;
 }
@@ -26,11 +34,6 @@
   height: auto;
   object-fit: cover;
   object-position: top;
-}
-
-.swiperContainer :global(.swiper-pagination) {
-  //position: absolute;
-  //bottom: 0;
 }
 
 .swiperContainer :global(.swiper-pagination):not (:last-child) > * {
